# Autotools-examples

./: autotools.odp
ex1/: Makefile
ex2/: Makefile  hello.c
ex3/: Makefile
ex4/: Makefile
ex5/: Makefile.in  configure.ac
ex6/: Makefile.in  main.c
ex7/: Makefile.in  configure  main.c  os_detect.h
ex8/: Makefile.in  config.h.in  configure  configure.ac  gtkdialog.c  gtkdialog.h  main.c  os_detect.c
